--- a/pages/author/author.wxml
+++ b/pages/author/author.wxml
@@ -55,14 +55,16 @@
                     <image src="../images/author-1.png" alt="" />
                     <text class="detail">王源源</text>
                 </navigator>
-                <view class="focus">+关注</view>
+                <view class="focus" catchtap="focus" wx:if="{{msg == 1}}">+关注</view>
+                <view class="active" bindtap="unfocus" wx:else>已关注</view>
             </view>
             <view class="ranking-item">
                 <navigator url="">
                     <image src="../images/author-2.png" alt="" />
                     <text class="detail">张小佳</text>
                 </navigator>
-                <view class="focus">+关注</view>
+                                <view class="focus" catchtap="focus" wx:if="{{msg == 1}}">+关注</view>
+                <view class="active" bindtap="unfocus" wx:else>已关注</view>
             </view>
             <view class="ranking-item">
                 <navigator url="">
