--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,5 @@
 /**index.wxss**/
-
+@import '../search/search.wxss';
 .container .header-wrapper {
     display: flex;
     justify-content: space-between;
@@ -13,33 +13,46 @@
 
 .container .scarch-wrapper {
     position: relative;
+    box-sizing: border-box;
+    padding:0  48rpx;
+    display: flow-root;
 }
 
 .container .scarch-wrapper .scarch-input {
     width: 650rpx;
-    height: 96rpx;
-    margin: auto;
+    height: 95rpx;
+    position: relative;
+}
+.container .scarch-wrapper .search{
+    width: 540rpx;
+    height: 95rpx;
     position: relative;
 }
 
-.container .scarch-wrapper .scarch-input input {
+.container .scarch-wrapper input {
     height: 95rpx;
     background: #2d353d;
     border-radius: 50rpx;
-    padding-left: 85rpx;
+    padding-left: 85rpx;         
 }
 
-.container .scarch-wrapper .scarch-input .place {
+.container .scarch-wrapper  .place {
     color: #9da3b4;
     font-size: 32rpx;
 }
 
-.container .scarch-wrapper .scarch-input .icon-sousuo {
+.container .scarch-wrapper  .icon-sousuo {
     color: #9da3b4;
     margin-left: 28rpx;
     position: absolute;
     top: 26rpx;
     font-size: 40rpx;
+}
+.container .scarch-wrapper .cancel {
+    float: right;
+    line-height: 90rpx;
+    color: #9da3b4;
+    font-size: 26rpx;
 }
 
 .class-ranking-wrap .title-wrap {
@@ -70,7 +83,7 @@
     width: 100%;
     margin-left: 48rpx;
     display: flex;
-    justify-content: space-around; 
+    justify-content: space-around;
     border-bottom: 2rpx solid #2f343c;
 }
 
@@ -168,9 +181,11 @@
     margin-bottom: 24rpx;
     padding: 0px 35rpx;
 }
-.hot-ranking-wrap{
+
+.hot-ranking-wrap {
     margin-bottom: 86rpx;
 }
+
 .hot-ranking-wrap .title-wrap {
     width: 650rpx;
     margin: auto;
@@ -194,8 +209,6 @@
 .hot-ranking-list {
     width: 200%;
     margin-left: 18rpx;
-    /* display: flex; */
-    /* justify-content: space-between; */
 }
 
 .hot-ranking-item {
@@ -258,4 +271,11 @@
 .hot-ranking-item .detail text {
     margin-top: 8rpx;
     display: flow-root;
+}
+
+.search {
+    width: 540rpx;
+    height: 96rpx;
+    float: left;
+    position: relative;
 }
