--- a/pages/comment/comment.wxss
+++ b/pages/comment/comment.wxss
@@ -1,10 +1,12 @@
 /* pages/comment/comment.wxss */
 .header {
-    text-align: right;
-    padding-right: 48rpx;
+    display: flex;
+    align-items: center;
+    padding-left: 48rpx;
     box-sizing: border-box;
     background: #21272e;
     width: 100%;
+    height: 80rpx;
     position: fixed;
     top: 0rpx;
     right: 0rpx;
@@ -13,6 +15,7 @@
 .container {
     box-sizing: border-box;
     padding: 0rpx 48rpx;
+    margin-top: 100rpx;
 }
 
 .comment-wrap .comment-item {
