--- a/pages/bookdetail/bookdetail.wxml
+++ b/pages/bookdetail/bookdetail.wxml
@@ -41,7 +41,7 @@
             <text>与三体文明的战争使人类第一次看到了宇宙黑暗的真</text>
             <text>相，地球文明像一个恐惧的孩子，熄灭了寻友的篝火，</text>
             <text>在暗夜中发抖。自以为历经沧桑，其实刚刚蹒跚学</text>
-            <text>步;自以为悟出了生存竞争的秘密，其实还远没有竞</text>
+            <text>步；自以为悟出了生存竞争的秘密，其实还远没有竞</text>
             <text>争的资格。</text>
         </view>
     </view>
