--- a/pages/explore/explore.wxml
+++ b/pages/explore/explore.wxml
@@ -1,20 +1,22 @@
 <!-- pages/explore/explore.wxml -->
+<view class="custom" style="height:{{statusBarHeight +10}}px"></view>
 <view class="container">
-    <view class="view-change">
+    <view class="view-change" style="top:{{statusBarHeight*2 +20}}rpx">
         <text class='iconfont icon-pailie {{cur == 1? "active":""}}' data-cur='1' bindtap="change"></text>
         <text class='iconfont icon-fangkuai {{cur == 2? "active":""}}' data-cur='2' bindtap="change"></text>
+        <text class="title">探索</text>
     </view>
     <view wx:if="{{cur == 2}}">
         <view class="content">
-            <navigator url="../bookdetail/bookdetail">
-                <view class="book-cover">
+            <view class="book-cover">
+                <navigator url="../bookdetail/bookdetail">
                     <image src="../images/santi.png" />
-                </view>
-                <view class="book-detail">
-                    <view class="book-name">三体：死神永生</view>
-                    <view class="author">刘慈欣</view>
-                </view>
-            </navigator>
+                </navigator>
+            </view>
+            <view class="book-detail">
+                <view class="book-name">三体：死神永生</view>
+                <view class="author">刘慈欣</view>
+            </view>
         </view>
         <view class="reader-wrap">
             <view class="reader-list">
@@ -57,6 +59,30 @@
     <view wx:else>
         <view class="book-wrap">
             <view class="book-list">
+                <view class="book-item">
+                    <navigator url="../bookdetail/bookdetail">
+                        <image src="../images/santi.png" />
+                        <view class="book-name">三体：死神永生</view>
+                    </navigator>
+                </view>
+                <view class="book-item">
+                    <navigator>
+                        <image src="../images/bainiangudu.png" />
+                        <view class="book-name">百年孤独</view>
+                    </navigator>
+                </view>
+                <view class="book-item">
+                    <navigator>
+                        <image src="../images/pingfanshijie.png" />
+                        <view class="book-name">平凡的世界</view>
+                    </navigator>
+                </view>
+                <view class="book-item">
+                    <navigator>
+                        <image src="../images/weilaijianshi.png" />
+                        <view class="book-name">未来简史</view>
+                    </navigator>
+                </view>
                 <view class="book-item">
                     <navigator url="../bookdetail/bookdetail">
                         <image src="../images/santi.png" />
