--- a/pages/authordetail/authordetail.wxss
+++ b/pages/authordetail/authordetail.wxss
@@ -53,14 +53,23 @@
     display: inline-block;
     margin-right: 25rpx;
 }
-
-.author-info .focus-wrap {
+.author-info .focus-wrap{
+    display: inline-block;
+}
+.author-info .focus-wrap .focus{
     width: 176rpx;
     line-height: 60rpx;
     text-align: center;
     border-radius: 12rpx;
-    display: inline-block;
     background-color: #478ce0;
+}
+.author-info .focus-wrap .active {
+    width: 176rpx;
+    line-height: 60rpx;
+    text-align: center;
+    border-radius: 12rpx;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2rpx solid #545d66;
 }
 
 .author-info .share-wrap .icon-fenxiang {
@@ -69,7 +78,14 @@
 }
 
 .author-info .share-wrap .share {
-    line-height: 60rpx;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0);
+    font-weight: normal;
+    color: #71768c;
+    display: inline;
+}
+button::after{
+    border: none;
 }
 
 .content-wrap {
