--- a/pages/bookdetail/bookdetail.wxml
+++ b/pages/bookdetail/bookdetail.wxml
@@ -23,17 +23,18 @@
     </view>
     <view class="option-wrap">
         <view class="item">
-            <text class="iconfont icon-xin "></text>
-            <text>收藏</text>
+            <text class="iconfont icon-xin {{collect==1? 'active':''}}" ></text>
+            <text wx:if="{{collect==1}}" bindtap="uncollect">已收藏</text>
+            <text wx:else bindtap="collect">收藏</text>
         </view>
         <view class="item">
             <text class="iconfont icon-fenxiang"></text>
-            <text>分享</text>
+            <button open-type="share" class="btn-share">分享</button>
         </view>
-        <view class="item" bindtap="show">
+        <view class="item">
             <text class="iconfont icon-shujia"></text>
-            <text wx:if="{{show==0}}">放入书架</text>
-            <text wx:if="{{show==2}}">已放入书架</text>
+            <text wx:if="{{show==0}}" bindtap="show">放入书架</text>
+            <text wx:else bindtap="remove">已放入书架</text>
         </view>
     </view>
     <view class="detail-wrap">
@@ -130,15 +131,17 @@
         <view class="buy">购买</view>
     </navigator>
 </view>
-<view class="show" wx:if="{{show==1}}">
+<view class="show" wx:if="{{show==1||remove==1}}">
     <view class="alert">
         <view class="book-cover">
             <image src="../images/santi.png" />
         </view>
         <view class="hint">
-            <view>已将这本书加入到</view>
+            <view wx:if="{{show==1}}">已将这本书加入到</view>
+            <view wx:if="{{remove==1}}">已将这本书移出</view>
             <view>个人书架</view>
         </view>
-        <view class="ok" bindtap="hide">好的</view>
+        <view class="ok" bindtap="hide" wx:if="{{show==1}}">好的</view>
+        <view class="ok" bindtap="hidden" wx:else>好的</view>
     </view>
 </view>
