--- a/pages/bookdetail/bookdetail.wxml
+++ b/pages/bookdetail/bookdetail.wxml
@@ -33,8 +33,8 @@
         </view>
         <view class="item">
             <text class="iconfont icon-shujia"></text>
-            <text wx:if="{{show==0}}" bindtap="show">放入书架</text>
-            <text wx:else bindtap="remove">已放入书架</text>
+            <text wx:if="{{show==2}}" bindtap="show">放入书架</text>
+            <text wx:if="{{remove==0}}" bindtap="remove">移出书架</text>
         </view>
     </view>
     <view class="detail-wrap">
@@ -131,17 +131,17 @@
         <view class="buy">购买</view>
     </navigator>
 </view>
-<view class="show" wx:if="{{show==1||remove==1}}">
+<view class="show" wx:if="{{show==1||remove==2}}" catchtap="cancel">
     <view class="alert">
         <view class="book-cover">
             <image src="../images/santi.png" />
         </view>
         <view class="hint">
             <view wx:if="{{show==1}}">已将这本书加入到</view>
-            <view wx:if="{{remove==1}}">已将这本书移出</view>
+            <view wx:if="{{remove==2}}">已将这本书移出</view>
             <view>个人书架</view>
         </view>
-        <view class="ok" bindtap="hide" wx:if="{{show==1}}">好的</view>
+        <view class="ok" catchtap="hide" wx:if="{{show==1}}">好的</view>
         <view class="ok" bindtap="hidden" wx:else>好的</view>
     </view>
 </view>
