--- a/pages/authordetail/authordetail.wxml
+++ b/pages/authordetail/authordetail.wxml
@@ -44,50 +44,54 @@
         </view>
         <view class="production-list">
             <view class="production-item">
-                <view class="cover">
-                    <image src="../images/yuwang.png" />
-                </view>
-                <view class="book-detail">
-                    <view class="book-name">鱼王</view>
-                    <view class="score-wrap">
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="score">5.0</text>
+                <navigator url="../bookdetail/bookdetail">
+                    <view class="cover">
+                        <image src="../images/yuwang.png" />
                     </view>
-                    <view class="detail">
-                        <text>全书由十三个内容相对独立的“叙事短篇小</text>
-                        <text>说”组成，全部围绕着人与自然的关...</text>
+                    <view class="book-detail">
+                        <view class="book-name">鱼王</view>
+                        <view class="score-wrap">
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="score">5.0</text>
+                        </view>
+                        <view class="detail">
+                            <text>全书由十三个内容相对独立的“叙事短篇小</text>
+                            <text>说”组成，全部围绕着人与自然的关...</text>
+                        </view>
+                        <view class="count">
+                            <text decode="{{true}}">366&ensp;人阅读</text>
+                        </view>
                     </view>
-                    <view class="count">
-                        <text decode="{{true}}">366&ensp;人阅读</text>
-                    </view>
-                </view>
+                </navigator>
             </view>
             <view class="production-item">
-                <view class="cover">
-                    <image src="../images/bukesiyidepengyou.png" />
-                </view>
-                <view class="book-detail">
-                    <view class="book-name">不可思议的朋友</view>
-                    <view class="score-wrap">
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="iconfont icon-xing"></text>
-                        <text class="score">5.0</text>
+                <navigator url="../bookdetail/bookdetail">
+                    <view class="cover">
+                        <image src="../images/bukesiyidepengyou.png" />
                     </view>
-                    <view class="detail">
-                        <text>讲述的是一段历经20年的非同寻常的友情</text>
-                        <text>我和自闭症少年“小安”相识在小...</text>
+                    <view class="book-detail">
+                        <view class="book-name">不可思议的朋友</view>
+                        <view class="score-wrap">
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="iconfont icon-xing"></text>
+                            <text class="score">5.0</text>
+                        </view>
+                        <view class="detail">
+                            <text>讲述的是一段历经20年的非同寻常的友情</text>
+                            <text>我和自闭症少年“小安”相识在小...</text>
+                        </view>
+                        <view class="count">
+                            <text decode="{{true}}">256&ensp;人阅读</text>
+                        </view>
                     </view>
-                    <view class="count">
-                        <text decode="{{true}}">256&ensp;人阅读</text>
-                    </view>
-                </view>
+                </navigator>
             </view>
             <view class="production-item">
                 <view class="cover">
