--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -10,7 +10,7 @@
         </view>
         <view class="share-wrap">
             <text class="iconfont icon-fenxiang"></text>
-            <text class="share">分享</text>
+            <button open-type="share" class="btn-share">分享</button>
         </view>
     </view>
     <view class="content-wrap">
@@ -31,16 +31,18 @@
     </view>
     <view class="user-operation">
         <view class="operation-list">
-            <navigator>
+            <navigator url="">
                 <view class="operation-item">
                     <text class="option">个人信息</text>
                     <text class="iconfont icon-zuo"></text>
                 </view>
             </navigator>
-            <view class="operation-item">
-                <text class="option">我的消息</text>
-                <text class="message">6</text>
-            </view>
+            <navigator url="">
+                <view class="operation-item">
+                    <text class="option">我的消息</text>
+                    <text class="message">6</text>
+                </view>
+            </navigator>
             <navigator url="../money/money">
                 <view class="operation-item">
                     <text class="option">账户余额</text>
@@ -48,10 +50,12 @@
                     <text class="iconfont icon-zuo"></text>
                 </view>
             </navigator>
-            <view class="operation-item">
-                <text class="option">我的评论</text>
-                <text class="iconfont icon-zuo"></text>
-            </view>
+            <navigator url="">
+                <view class="operation-item">
+                    <text class="option">我的评论</text>
+                    <text class="iconfont icon-zuo"></text>
+                </view>
+            </navigator>
             <navigator url="../set/set">
                 <view class="operation-item">
                     <text class="option">设置</text>
